--- a/PresentationLayer/Properties/launchSettings.json
+++ b/PresentationLayer/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37198",
-      "sslPort": 44307
+      "applicationUrl": "http://localhost:49197",
+      "sslPort": 44380
     }
   },
   "profiles": {
-    "CalCalc": {
+    "PresentationLayer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7279;http://localhost:5257",
+      "applicationUrl": "https://localhost:7289;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
