--- a/PresentationLayer/appsettings.json
+++ b/PresentationLayer/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=Test;Trusted_Connection=True;Encrypt=False;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
